--- a/SmartWicket/Views/Home/About.cshtml
+++ b/SmartWicket/Views/Home/About.cshtml
@@ -1,7 +1,33 @@
-﻿@{
-    ViewBag.Title = "About";
-}
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
-
-<p>Use this area to provide additional information.</p>
+﻿<div id="grid"></div>
+<p>Here</p>
+<script>
+    $("#grid").kendoGrid({
+        columns: [
+            { "title": "Id", "width": "100px", "field": "Id" },
+            { "title": "VisitDate", "width": "200px", "field": "VisitDate" },
+            { "title": "Visitor", "field": "Visitor" }
+        ],
+        groupable: true,
+        pageable: true,
+        sortable: true,
+        dataSource: {
+            type: "webapi",
+            transport: {
+                read: {
+                    url: "/api/VisitsCRUD"
+                }
+            },
+            pageSize: 10,
+            serverPaging: true,
+            serverSorting: true,
+            serverFiltering: true,
+            serverGrouping: true,
+            serverAggregates: true,
+            schema: {
+                data: "Data",
+                total: "Total",
+                errors: "Errors"
+            }
+        }
+    });
+</script>
